<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:text="@string/registerHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textHeadReg" android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="62dp"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" android:id="@+id/editTextregUn" android:hint="@string/username"
        android:layout_marginTop="42dp" app:layout_constraintTop_toBottomOf="@+id/textHeadReg"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextregPw"
        android:hint="@string/password" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextregUn" app:layout_constraintHorizontal_bias="0.502"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/buttonReg" android:text="@string/btnregist" android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxStudent" app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="33dp" app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintVertical_bias="0.0"/>
    <CheckBox
        android:text="@string/teacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBoxTeacher" android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextregPw" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <CheckBox
        android:text="@string/student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBoxStudent" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="17dp" app:layout_constraintTop_toBottomOf="@+id/checkBoxTeacher"/>
</android.support.constraint.ConstraintLayout>