<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:text="@string/loginHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textHeadLog" android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" android:id="@+id/editTextlogUn" android:hint="@string/username"
        android:layout_marginTop="72dp" app:layout_constraintTop_toBottomOf="@+id/textHeadLog"
        app:layout_constraintHorizontal_bias="0.502"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" android:id="@+id/editTextlogPw" android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextlogUn" android:hint="@string/password"
        app:layout_constraintHorizontal_bias="0.502"/>
    <Button
        android:text="@string/btnlog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnLog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextlogPw"/>
    <Button
        android:text="@string/btnregist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnReg" android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@+id/btnLog" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="77dp"/>
</android.support.constraint.ConstraintLayout>