<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TeacherActivity">

    <TextView
        android:text="@string/teacherHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="44dp" app:layout_constraintTop_toTopOf="parent" android:textSize="25sp"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText" android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" android:hint="@string/subject"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText2" android:hint="@string/msg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" app:layout_constraintHorizontal_bias="0.502"
        android:layout_marginTop="16dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/button" android:text="@string/sendbtn" android:layout_marginTop="65dp"
        app:layout_constraintTop_toBottomOf="@+id/editText2" app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="63dp"
        app:layout_constraintVertical_bias="1.0"/>
</android.support.constraint.ConstraintLayout>